--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
-mlr_2.2
-- basic R learners now have new slots: name (a descriptive name of the algorithm), 
-  short.name (abbreviation that can be used in plots and tables) and note 
+mlr_2.2:
+- basic R learners now have new slots: name (a descriptive name of the algorithm),
+  short.name (abbreviation that can be used in plots and tables) and note
   (notes regarding slight changes for the mlr integration of the learner and such).
 - fix a bug in "smote" when only factor features are present
 - change to oversampling: sample new observations only (with replacement)
@@ -21,6 +21,7 @@ mlr_2.2
   equal number of times
 - fixed a bug in filter methods of the FSelector package that caused an error when variable names
   contained accented letters
+- plotLearnerPrediction works for clustering
 
 - new learners:
 -- classif.bartMachine
@@ -42,7 +43,7 @@ mlr_2.2
 
 - new functions
 -- makeMulticlassWrapper
--- joinClassLevels  
+-- joinClassLevels
 -- summarizeColumns, summarizeLevels
 -- capLargeValues, mergeFactorLevelsBySize
 
@@ -51,12 +52,12 @@ mlr_2.1:
 - mlr now supports cluster analysis (experimental)
 - improve makeWeightedClassesWrapper: Hyperparams for class weighting are now supported, too.
 - removed fix.factors option from randomForest, but added it in general to makeLearner,
-  so it now works for all learners. 
+  so it now works for all learners.
   Helps when feature factor levels where dropped in newdata prediction data.frames
-- more consistent results for tuning algorithms and parameters with "trafos" : 
+- more consistent results for tuning algorithms and parameters with "trafos" :
   we always return the optimal settings on the transformed scale, but in the opt.path in
   the original scale.
-- fix a bug when feature filtering resulted in a NoFeatureModel 
+- fix a bug when feature filtering resulted in a NoFeatureModel
 - resample now returns a data.frame "err.mgs" or error messages that might have occurred during resampling
 - stratified resampling for survival
 
@@ -81,7 +82,7 @@ mlr_2.1:
 -- removeHyperPars
 -- tuneParamsMultiCrit
 -- makeTuneMultiCritControlGrid, makeTuneMultiCritControlRandom, makeTuneMultiCritControlNSGA2
--- plotTuneMultiCritResult 
+-- plotTuneMultiCritResult
 -- getFailureModelMsg
 
 mlr_2.0:
@@ -105,7 +106,7 @@ mlr_2.0:
 - removed tuning via R' optim method (makeTuneControlOptim), as the optimizers in there really make
   no sense for tuning
 - Grid search was improved so one does not have to discretize parameters manually anymore
-  (although this is still possible). Instead one now passes a 'resolution' argument. Internally we 
+  (although this is still possible). Instead one now passes a 'resolution' argument. Internally we
   now use ParamHelpers::generateGridDesign for this.
 - toy tasks were added for convenient usage: iris.task, sonar.task, bh.task
   they also also have corresponding resampling instances, so you directly start working, e.g., iris.rin
@@ -157,7 +158,7 @@ mlr_2.0:
 -- makeModelMultiplexer, makeModelMultiplexerParamSet
 -- makeCostSensTask, makeCostSensClassifWrapper, makeCostSensRegrWrapper, makeCostsSensWeightedPairsLearner
 -- makeSurvTask
--- impute, reimpute, makeImputeWrapper, lots of impute<Method>, makeImputeMethod 
+-- impute, reimpute, makeImputeWrapper, lots of impute<Method>, makeImputeMethod
 
 mlr_1.1:
 - Initial release to CRAN
