--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,9 @@
 mlr_2.2:
+- Learners and tasks now support ordered factors as features. 
+  The task description knows whether ordered factors are present and it is checked whether the learner
+  supports such a feature. We have set this property 'ordered' very conservatively, so very
+  few learners have it, where we are sure ordered inputs are handled correctly during training. 
+  If you know of more models that support this, please inform us.
 - basic R learners now have new slots: name (a descriptive name of the algorithm),
   short.name (abbreviation that can be used in plots and tables) and note
   (notes regarding slight changes for the mlr integration of the learner and such).
