--- a/NEWS
+++ b/NEWS
@@ -1,14 +1,14 @@
 mlr_2.2:
-- Learners and tasks now support ordered factors as features. 
+- The web tutorial was MUCH improved!
+- Some example tasks and data sets were added for simple access
+- Learners and tasks now support ordered factors as features.
   The task description knows whether ordered factors are present and it is checked whether the learner
   supports such a feature. We have set this property 'ordered' very conservatively, so very
-  few learners have it, where we are sure ordered inputs are handled correctly during training. 
+  few learners have it, where we are sure ordered inputs are handled correctly during training.
   If you know of more models that support this, please inform us.
 - basic R learners now have new slots: name (a descriptive name of the algorithm),
   short.name (abbreviation that can be used in plots and tables) and note
   (notes regarding slight changes for the mlr integration of the learner and such).
-- fix a bug in "smote" when only factor features are present
-- change to oversampling: sample new observations only (with replacement)
 - Additional arguments for imputation functions to allow a more fine-grain
   control of dummy column creation
 - imputeMin and imputeMax now subtract or add a multiple of the range of
@@ -21,12 +21,16 @@ mlr_2.2:
   extracted in a different order than the learner/task names. Thus, learner/task names in the
   output of benchmark experiments sometimes did not correspond with the printed performance measures.
 - fixed a bug in createDummyFeatures that caused an error when the data contained missing values.
-- extension to smote algorithm (sampling): minority class observations in binary classification
-  are either chosen via sampling or alternatively, each minority class observation is used an
-  equal number of times
+- plotLearnerPrediction works for clustering and allows greyscale plots (for printing or articles)
+- the whole object-oriented structure behind feature filtering was much improved
 - fixed a bug in filter methods of the FSelector package that caused an error when variable names
   contained accented letters
-- plotLearnerPrediction works for clustering
+- imbalancy correction + smote:
+  -- fix a bug in "smote" when only factor features are present
+  -- change to oversampling: sample new observations only (with replacement)
+  --- extension to smote algorithm (sampling): minority class observations in binary classification
+      are either chosen via sampling or alternatively, each minority class observation is used an
+      equal number of times
 
 - new learners:
 -- classif.bartMachine
@@ -37,14 +41,17 @@ mlr_2.2:
 -- regr.plsr
 -- regr.randomForestSRC
 -- cluster.cmeans
+-- cluster.DBScan
 -- cluster.kmeans
 -- cluster.Cobweb
 -- cluster.FarthestFirst
+-- surv.cvglmnet
 
 - new filters:
+-- univariate
 -- carscore
--- rf.importance
--- rf.min.depth
+-- rf.importance, rf.min.depth
+-- anova.test, kruskal.test
 
 - new functions
 -- makeMulticlassWrapper
